--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Ankush Kumar</span></h1>
-			            <h2 class="mb-4">A Freelancer</h2>
+			            <h2 class="mb-4">A Freelancer and <span>Software Engineer</span></h2>
 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -77,7 +77,7 @@
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm a <span>web designer</span> based in London</h1>
+			            <h1 class="mb-4 mt-3">I'm a <span>software engineer</span> based in Delhi</h1>
 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -102,12 +102,12 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <p>Hi, I’m Ankush Kumar, a software engineer passionate about AI, ML, DL, computer vision, and robotics. I work at the intersection of technology and innovation, building intelligent systems for med-tech, automation, and smart robotics. I love solving complex problems and turning ideas into real-world applications.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Ankush Kumar</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>August 02, 1998</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Saket, Delhi, India</span></li>
+		            	<li class="d-flex"><span>Zip code:</span> <span>110017</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>ankushkr2898@outlook.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+91-882-522-4197</span></li>
 		            </ul>
@@ -133,42 +133,42 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p>Academic background, projects and work experience</p>
           </div>
         </div>
     		<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Master Degree of Design</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="date">2017-2021</span>
+    					<h2>Bachelor's Degree of Technology</h2>
+    					<span class="position">Aryabhatta Knowledge University, Patna</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Bachelor's Degree of C.A</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="date">Jan 2023 - Jul 2023</span>
+    					<h2>Student Trainee</h2>
+    					<span class="position">Mercedes-Benz Research and Development India</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Diploma in Computer</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="date">May 2025 - Present</span>
+    					<h2>Software Engineer</h2>
+    					<span class="position">Stryker</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     			</div>
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Art &amp; Creative Director</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="date">2021-2023</span>
+    					<h2>Master's Degree of Technology</h2>
+    					<span class="position">National Institute of Technology Karnataka, Surathkal</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Wordpress Developer</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="date">Aug 2023 - May 2025</span>
+    					<h2>Post Graduate Engineers Trainee </h2>
+    					<span class="position">Mercedes-Benz Research and Development India</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
@@ -550,7 +550,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+	            <p>Block A, Prayavaran Complex, Saket, New Delhi, India - 110017</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -559,7 +559,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+	            <p><a href="tel://8825224197">+ 91 882 522 4197</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -568,7 +568,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+	            <p><a href="mailto:ankushkr2898@outlook.com">ankushkr2898@outlook.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -577,7 +577,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">yoursite.com</a></p>
+	            <p><a href="#">ankushkr2898.github.io</a></p>
 	          </div>
           </div>
         </div>
