--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
-	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+	          <!-- <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li> -->
+	          <!-- <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li> -->
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -116,7 +116,7 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="120">0</span>
+	                <span class="number" data-number="12">0</span>
 	                <span>Project complete</span>
                 </p>
                 <p><a href="cv.pdf" download class="btn btn-primary py-4 px-5">Download CV</a></p>
@@ -142,13 +142,13 @@
     					<span class="date">2017-2021</span>
     					<h2>Bachelor's Degree of Technology</h2>
     					<span class="position">Aryabhatta Knowledge University, Patna</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<p class="mt-4">Passionate about designing and analyzing electrical and electronic systems, with expertise in control systems, power electronics, and circuit simulations. Skilled in MATLAB, advanced engineering mathematics, and practical problem-solving, always exploring innovative solutions to real-world challenges.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">Jan 2023 - Jul 2023</span>
     					<h2>Student Trainee</h2>
     					<span class="position">Mercedes-Benz Research and Development India</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<p class="mt-4">Worked on data analysis to detect anomalies in recorded signals from self-driving vehicles, enhancing safety and performance insights. Gained hands-on experience with autonomous vehicle technologies, sensor fusion, and automotive systems, while developing strong analytical and problem-solving skills in real-world applications.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">May 2025 - Present</span>
@@ -163,13 +163,13 @@
     					<span class="date">2021-2023</span>
     					<h2>Master's Degree of Technology</h2>
     					<span class="position">National Institute of Technology Karnataka, Surathkal</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<p class="mt-4">Specialized in signal processing and machine learning, with hands-on experience in Python, deep learning, computer vision, image processing, and algorithm optimization. Passionate about turning data and signals into intelligent solutions.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">Aug 2023 - May 2025</span>
     					<h2>Post Graduate Engineers Trainee </h2>
     					<span class="position">Mercedes-Benz Research and Development India</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<p class="mt-4">Worked in the Active Safety team on Level 2 / L2++ autonomous vehicle features, including Auto Emergency Braking (AEB), Forward Collision Warning (FCW), and Close Distance Warning (CDW). Developed algorithms to enhance vehicle safety and intelligence, focusing on real-time decision-making, predictive analysis, and robust sensor fusion for smarter self-driving systems.</p>
     				</div>
     			</div>
     		</div>
@@ -263,13 +263,13 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Skills</h1>
             <h2 class="mb-4">My Skills</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>Here are some of the technologies and skills I work with:</p>
           </div>
         </div>
 				<div class="row">
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>Photoshop</h3>
+							<h3>C/C++</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -280,7 +280,7 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>jQuery</h3>
+							<h3>Python</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -291,18 +291,18 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>HTML5</h3>
+							<h3>Robotics</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
-							    <span>95%</span>
+							  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+							    <span>75%</span>
 							  	</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>CSS3</h3>
+							<h3>Deep Learning</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -313,7 +313,7 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>WordPress</h3>
+							<h3>Matlab</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -324,7 +324,7 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>SEO</h3>
+							<h3>Computer Vision</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -338,7 +338,7 @@
 		</section>
  
 
-    <section class="ftco-section ftco-project" id="projects-section">
+    <!-- <section class="ftco-section ftco-project" id="projects-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -408,10 +408,10 @@
     			</div>
     		</div>
     	</div>
-    </section>
+    </section> -->
 
 
-    <section class="ftco-section" id="blog-section">
+    <!-- <section class="ftco-section" id="blog-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -474,7 +474,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container">
@@ -660,9 +660,9 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            <p>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved.
+  </p>
           </div>
         </div>
       </div>
